Closed Bug 1784183 Opened 2 years ago Closed 2 years ago

nsWindow::mPanInProgress not initialized

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- fixed
firefox103 --- wontfix
firefox104 --- fixed
firefox105 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This field was

bool mPanInProgress = false;

but then in bug 1748638 got changed to

bool mPanInProgress : 1;

but it did not get init'd in the constructor like the other packed bools.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5536ba638ffd
Initialize nsWindow::mPanInProgress. r=rmader

Set release status flags based on info from the regressing bug 1748638

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch

The patch landed in nightly and beta is affected.
:tnikkel, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox104 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(tnikkel)

Comment on attachment 9289378 [details]
Bug 1784183. Initialize nsWindow::mPanInProgress. r?stransky,emilio,karlt,rmader

Beta/Release Uplift Approval Request

  • User impact if declined: the first touchpad pan in a window on linux may not be handled properly
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): just initializing a variable that should have been initialized
  • String changes made/needed:
  • Is Android affected?: No
Flags: needinfo?(tnikkel)
Attachment #9289378 - Flags: approval-mozilla-beta?

Comment on attachment 9289378 [details]
Bug 1784183. Initialize nsWindow::mPanInProgress. r?stransky,emilio,karlt,rmader

Approved for 104.0b9

Attachment #9289378 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Pretty minor fix, but also a trivial ride-along fix if you wanted to nominate for ESR102 approval. Feel free to wontfix otherwise.

Flags: needinfo?(tnikkel)

Comment on attachment 9289378 [details]
Bug 1784183. Initialize nsWindow::mPanInProgress. r?stransky,emilio,karlt,rmader

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: very low risk, fixes not initialized variable that would affect only first interaction with a window
  • User impact if declined: very low risk, fixes not initialized variable that would affect only first interaction with a window
  • Fix Landed on Version: 105
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): fixes not initialized variable
Flags: needinfo?(tnikkel)
Attachment #9289378 - Flags: approval-mozilla-esr102?

Comment on attachment 9289378 [details]
Bug 1784183. Initialize nsWindow::mPanInProgress. r?stransky,emilio,karlt,rmader

Approved for 102.3esr.

Attachment #9289378 - Flags: approval-mozilla-esr102? → approval-mozilla-esr102+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: