Bug 1784183. Initialize nsWindow::mPanInProgress. r=rmader, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D154331